Fix login spacing

--- a/ui/scss/component/nag.scss
+++ b/ui/scss/component/nag.scss
@@ -41,12 +41,16 @@ $nag-error-z-index: 999;
   background-color: var(--color-primary);
   color: var(--color-white);
   z-index: $nag-helpful-z-index;
+  border-radius: var(--border-radius);
+  margin-top: var(--spacing-s);
 }
 
 .nag--error {
   background-color: #000;
   color: var(--color-text-error);
   z-index: $nag-error-z-index;
+  border-radius: var(--border-radius);
+  margin-top: var(--spacing-s);
 }
 
 .nag__message {
